<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <EditTextPreference
        app:icon="@drawable/ic_social_emoji_symbols"
        app:key="profileName"
        app:title="@string/profile_name"
        app:useSimpleSummaryProvider="true" />

    <PreferenceCategory app:title="@string/olcrtc_connection_cat">

        <Preference
            app:icon="@drawable/ic_baseline_layers_24"
            app:summary="@string/olcrtc_provider_fixed_summary"
            app:title="@string/olcrtc_provider"
            android:selectable="false" />

        <Preference
            app:icon="@drawable/ic_baseline_speed_24"
            app:summary="@string/olcrtc_transport_fixed_summary"
            app:title="@string/olcrtc_transport"
            android:selectable="false" />

        <EditTextPreference
            app:icon="@drawable/ic_hardware_router"
            app:key="serverOlcrtcRoomId"
            app:summary="@string/olcrtc_room_id_summary"
            app:title="@string/olcrtc_room_id" />

        <EditTextPreference
            app:dialogLayout="@layout/layout_password_dialog"
            app:icon="@drawable/ic_baseline_lock_24"
            app:key="serverOlcrtcRoomPassword"
            app:summary="@string/olcrtc_room_password_summary"
            app:title="@string/olcrtc_room_password" />

        <EditTextPreference
            app:dialogLayout="@layout/layout_password_dialog"
            app:icon="@drawable/ic_settings_password"
            app:key="serverOlcrtcAuthToken"
            app:summary="@string/olcrtc_auth_token_summary"
            app:title="@string/olcrtc_auth_token" />

        <EditTextPreference
            app:dialogLayout="@layout/layout_password_dialog"
            app:icon="@drawable/ic_settings_password"
            app:key="serverOlcrtcKeyHex"
            app:summary="@string/olcrtc_key_hex_summary"
            app:title="@string/olcrtc_key_hex" />

        <Preference
            app:icon="@drawable/ic_baseline_info_24"
            app:key="serverOlcrtcClientId"
            app:persistent="false"
            app:summary="@string/olcrtc_client_id_summary"
            app:title="@string/olcrtc_client_id" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/olcrtc_advanced_cat">

        <EditTextPreference
            app:icon="@drawable/ic_action_dns"
            app:key="serverOlcrtcDnsServer"
            app:summary="@string/olcrtc_dns_server_summary"
            app:title="@string/olcrtc_dns_server"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            android:defaultValue="15"
            android:inputType="number"
            app:icon="@drawable/ic_service_idle"
            app:key="serverOlcrtcKeepaliveInterval"
            app:summary="@string/olcrtc_keepalive_interval_summary"
            app:title="@string/olcrtc_keepalive_interval" />

    </PreferenceCategory>

</PreferenceScreen>
